<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Framelayout to display Fragments -->

    <FrameLayout
        android:id="@+id/frame_container_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/mapRegister"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/frame_container_3"
        android:background="@color/bg_login" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/btnLogin"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtStartAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_start_addess"
                android:inputType="textNoSuggestions"
                android:padding="10dp"
                android:onClick="showDialogonClick"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtEndAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_end_addess"
                android:inputType="textNoSuggestions"
                android:padding="10dp"
                android:onClick="showDialogonClick"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip" >

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/btn_login_bg"
                    android:onClick="submitOnclick"
                    android:text="@string/btn_submit"
                    android:textColor="@color/btn_login" />

                <Button
                    android:id="@+id/btnAdvance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/btn_login_bg"
                    android:onClick="AdvanceonClick"
                    android:text="@string/btn_submitAdvance"
                    android:textColor="@color/btn_login" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>